# pyigr

./: pyproject.toml  readme.md
doc/: README.md  _.qmd  pyproject.toml
doc/src/doc/: __init__.py
src/pyigr/: core.py  query.py  relations.py
src/pyigr/core/: core.py  query.py  relations.py
