[project]
name = "doc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Majid alDosari", email = "majidaldosari-github@yahoo.com" }
]
dependencies = []
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "nbformat", "nbclient", "ipykernel"
] 

[tool.hatch.metadata]
allow-direct-references = true
